fixed overflow

--- a/client/src/components/Cars/Posts/All_Posts/AllPosts.module.scss
+++ b/client/src/components/Cars/Posts/All_Posts/AllPosts.module.scss
@@ -3,9 +3,12 @@ $dark-blue-var: #0E1635;
 $light-blue-var: #00308F;
 
 .container{
+    margin: 0;
+    padding: 0;
     margin-left: 150px;
     padding-top: 100px;
     height: 100%;
     width: 700px;
     background-color: $dark-blue-var;
+    overflow: auto;
 }
