--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -7,4 +7,5 @@
     background-color: #0E1635;
     color: white;
     text-align: center;
+    border-top: 2px solid #00308F;
 }
